--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  form(action='/', method='POST')
+    input(type='submit', value='POST to /')
+  br
+  form(action='/upload', method='POST')
+    input(type='file', name='sampleFile')
+    input(type='submit', value='Upload!')
