--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  form(action='/', method='POST')
-    input(type='submit', value='POST to /')
-  br
-  form(action='/upload', method='POST')
+  form(action='/upload', method='POST', enctype="multipart/form-data")
     input(type='file', name='sampleFile')
     input(type='submit', value='Upload!')
