store image for colorpicker localy

--- a/views/index.pug
+++ b/views/index.pug
@@ -43,7 +43,7 @@ block content
           input.colorInput(type='hidden', name='colorFgPrimary')
     br
     label Primary background color
-    input(type='text', name='colorBgPrimary', value='#fff')
+    input(type='color', name='colorBgPrimary', value='#fff')
     br
     label Secondary foreground color
     input(type='text', name='colorFgSecondary', value='#666')
