--- a/public/stylesheets/tinycolorpicker.css
+++ b/public/stylesheets/tinycolorpicker.css
@@ -1,5 +1,5 @@
 /* COLORPICKER 1 EXAMPLE */
-#colorPicker
+.colorPicker
 {
     width:          30px;
     height:         30px;
@@ -8,7 +8,7 @@
     margin: 80px auto 20px;
 }
 
-#colorPicker .track {
+.colorPicker .track {
     /*background:     #EFEFEF url(../images/text-color.png) no-repeat 50% 50%;*/
     height:         150px;
     width:          150px;
@@ -27,7 +27,7 @@
 
 }
 
-#colorPicker .color {
+.colorPicker .color {
     width:          25px;
     height:         25px;
     padding:        1px;
@@ -42,7 +42,7 @@
     cursor: pointer;
 }
 
-#colorPicker .colorInner {
+.colorPicker .colorInner {
     width:          25px;
     height:         25px;
     -webkit-border-radius: 27px;
@@ -50,7 +50,7 @@
     border-radius: 27px;
 }
 
-#colorPicker .dropdown {
+.colorPicker .dropdown {
     list-style: none;
     display: none;
     width: 27px;
@@ -61,7 +61,7 @@
     z-index: 1000;
 }
 
-#colorPicker .dropdown li{
+.colorPicker .dropdown li{
     height: 25px;
     cursor: pointer;
 }
