--- a/views/index.pug
+++ b/views/index.pug
@@ -5,60 +5,69 @@ block script
   script(src='/javascripts/client_upload.js')
 
 block content
-  .mdl-layout__container
-    .mdl-layout.mdl-js-layout
-      header.mdl-layout__header
-      main.mdl-layout__content
-          form(action='/upload', method='POST', enctype="multipart/form-data")
-            label Company name
-            input(type='text', name='companyName')
-            br
-            label Company logo
-            input(type='file', name='companyLogo')
-            br
-            label Homescreen icon
-            input(type='file', name='homescreenIcon')
-            br
-            label Hero text
-            input(type='text', name='heroText')
-            br
-            label Hero image
-            input(type='file', name='heroImage')
-            br
-            label Sub-text
-            input(type='text', name='subText')
-            br
-            label Call-to-action text
-            input(type='text', name='ctaText')
-            br
+  .mdl-layout.mdl-js-layout
+    header.mdl-layout__header
+    .mdl-grid
+        form.mdl-cell.mdl-cell--12-col(action='/upload', method='POST', enctype="multipart/form-data")
+          label Company name
+          input(type='text', name='companyName')
+          br
+          label Company logo
+          input(type='file', name='companyLogo')
+          br
+          label Homescreen icon
+          input(type='file', name='homescreenIcon')
+          br
+          label Hero text
+          input(type='text', name='heroText')
+          br
+          label Hero image
+          input(type='file', name='heroImage')
+          br
+          label Sub-text
+          input(type='text', name='subText')
+          br
+          label Call-to-action text
+          input(type='text', name='ctaText')
+          br
 
-            label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for='uploadImage')
-              input#uploadImage.mdl-checkbox__input(type='checkbox', onchange='toggleUploadImageField(this)')
-              span.mdl-checkbox__label Upload image to pick colors
-            br
-            #fileForPicker(style='display: none;')
-              label File for color picker
-              input#file-input(type='file' onchange='uploadFile(this)')
-            br
-            #colorsBlock
-              #imageContainer
-              #primaryFgColorWrapper.colorPicker-wrapper
-                input#primaryFgColorPickerInput(type='color', name='primaryFg')
-              #primaryBgColorWrapper.colorPicker-wrapper
-                input#primaryBgColorPickerInput(type='color', name='primaryBg')
-              #secondaryFgColorWrapper.colorPicker-wrapper
-                input#secondaryFgColorPickerInput(type='color', name='primaryFg')
-              #secondaryBgColorWrapper.colorPicker-wrapper
-                input#secondaryBgColorPickerInput(type='color', name='primaryBg')
-            .labels-block
-              label Primary foreground color
-              label Primary background color
-              label Secondary foreground color
-              label Secondary background color
+          label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for='uploadImage')
+            input#uploadImage.mdl-checkbox__input(type='checkbox', onchange='toggleUploadImageField(this)')
+            span.mdl-checkbox__label Upload image to pick colors
+          br
+          #fileForPicker(style='display: none;')
+            label File for color picker
+            input#file-input(type='file' onchange='uploadFile(this)')
+          br
+
+          #colorsBlock.mdl-grid
+            #imageContainer.image-container
+            //.labels-block.mdl-grid
+            //  .mdl-cell.mdl-cell--3-col
+            //    label Primary foreground color
+            //  .mdl-cell.mdl-cell--3-col
+            //    label Primary background color
+            //  .mdl-cell.mdl-cell--3-col
+            //    label Secondary foreground color
+            //  .mdl-cell.mdl-cell--3-col
+            //    label Secondary background color
+            #primaryFgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col
+              input#primaryFgColorPickerInput(type='color', name='primaryFg')
+              label.mdl-textfield__label Primary foreground color
+            #primaryBgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col.mdl-cell--3-offset
+              input#primaryBgColorPickerInput(type='color', name='primaryBg')
+              label.mdl-textfield__label Primary background color
+            #secondaryFgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col.mdl-cell--6-offset
+              input#secondaryFgColorPickerInput(type='color', name='secondaryFg')
+              label.mdl-textfield__label Secondary foreground color
+            #secondaryBgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col.mdl-cell--9-offset
+              input#secondaryBgColorPickerInput(type='color', name='secondaryBg')
+              label.mdl-textfield__label Secondary background color
 
 
-            br
-            input(type='submit', value='Submit')
+
+          br
+          input(type='submit', value='Submit')
 
 
 
