--- a/public/stylesheets/colors-block.css
+++ b/public/stylesheets/colors-block.css
@@ -32,3 +32,34 @@
 .image-container {
   width: 100%;
 }
+.picker-label {
+  bottom: -30px;
+  position: absolute;
+}
+.form-container {
+  max-width: 500px;
+  width: 100%;
+}
+.mdl-textfield {
+  width: 100%;
+}
+
+
+.mdl-button--file input {
+  cursor: pointer;
+  height: 100%;
+  right: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 300px;
+  z-index: 4;
+}
+
+.mdl-textfield--file .mdl-textfield__input {
+  box-sizing: border-box;
+  width: calc(100% - 32px);
+}
+.mdl-textfield--file .mdl-button--file {
+  right: 0;
+}
