--- a/views/index.pug
+++ b/views/index.pug
@@ -7,50 +7,60 @@ block script
 block content
   .mdl-layout.mdl-js-layout
     header.mdl-layout__header
-    .mdl-grid
-        form.mdl-cell.mdl-cell--12-col(action='/upload', method='POST', enctype="multipart/form-data")
-          label Company name
-          input(type='text', name='companyName')
+    .mdl-grid.form-container
+        form.params-form.mdl-cell.mdl-cell--12-col(action='/upload', method='POST', enctype="multipart/form-data")
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            input.mdl-textfield__input(type='text', name='companyName')
+            label.mdl-textfield__label Company name
           br
-          label Company logo
-          input(type='file', name='companyLogo')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--file
+            input.mdl-textfield__input(placeholder='Company logo', type='text', readonly)
+            .mdl-button.mdl-button--primary.mdl-button--icon.mdl-button--file
+              i.material-icons attach_file
+              input(type='file', name='companyLogo', onchange='showFileName(this)')
           br
-          label Homescreen icon
-          input(type='file', name='homescreenIcon')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--file
+            input.mdl-textfield__input(placeholder='Homescreen icon', type='text', readonly)
+            .mdl-button.mdl-button--primary.mdl-button--icon.mdl-button--file
+              i.material-icons attach_file
+              input(type='file', name='homescreenIcon', onchange='showFileName(this)')
           br
-          label Hero text
-          input(type='text', name='heroText')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            input.mdl-textfield__input(type='text', name='heroText')
+            label.mdl-textfield__label Hero text
           br
-          label Hero image
-          input(type='file', name='heroImage')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--file
+            input.mdl-textfield__input(placeholder='Hero image', type='text', readonly)
+            .mdl-button.mdl-button--primary.mdl-button--icon.mdl-button--file
+              i.material-icons attach_file
+              input(type='file', name='heriImage', onchange='showFileName(this)')
           br
-          label Sub-text
-          input(type='text', name='subText')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            input.mdl-textfield__input(type='text', name='subText')
+            label.mdl-textfield__label Sub-text
           br
-          label Call-to-action text
-          input(type='text', name='ctaText')
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            input.mdl-textfield__input(type='text', name='ctaText')
+            label.mdl-textfield__label Call-to-action text
           br
-
           label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for='uploadImage')
             input#uploadImage.mdl-checkbox__input(type='checkbox', onchange='toggleUploadImageField(this)')
             span.mdl-checkbox__label Upload image to pick colors
           br
           #fileForPicker(style='display: none;')
-            label File for color picker
-            input#file-input(type='file' onchange='uploadFile(this)')
+            .mdl-textfield.mdl-js-textfield.mdl-textfield--file
+              input.mdl-textfield__input(placeholder='File for color picker', type='text', readonly)
+              .mdl-button.mdl-button--primary.mdl-button--icon.mdl-button--file
+                i.material-icons attach_file
+                input(type='file', name='heriImage', onchange='showFileName(this), uploadFile(this)')
+
+            //label File for color picker
+            //input#file-input(type='file' onchange='uploadFile(this)')
           br
 
           #colorsBlock.mdl-grid
             #imageContainer.image-container
-            //.labels-block.mdl-grid
-            //  .mdl-cell.mdl-cell--3-col
-            //    label Primary foreground color
-            //  .mdl-cell.mdl-cell--3-col
-            //    label Primary background color
-            //  .mdl-cell.mdl-cell--3-col
-            //    label Secondary foreground color
-            //  .mdl-cell.mdl-cell--3-col
-            //    label Secondary background color
+
             #primaryFgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col
               input#primaryFgColorPickerInput(type='color', name='primaryFg')
               label.mdl-textfield__label Primary foreground color
@@ -63,7 +73,15 @@ block content
             #secondaryBgColorWrapper.colorPicker-wrapper.mdl-cell.mdl-cell--3-col.mdl-cell--9-offset
               input#secondaryBgColorPickerInput(type='color', name='secondaryBg')
               label.mdl-textfield__label Secondary background color
-
+          .labels-block.mdl-grid(style='display:none')
+            .mdl-cell.mdl-cell--3-col
+              label Primary foreground color
+            .mdl-cell.mdl-cell--3-col
+              label Primary background color
+            .mdl-cell.mdl-cell--3-col
+              label Secondary foreground color
+            .mdl-cell.mdl-cell--3-col
+              label Secondary background color
 
 
           br
