--- a/public/stylesheets/colors-block.css
+++ b/public/stylesheets/colors-block.css
@@ -1,4 +1,5 @@
 #colorsBlock {
+  margin-bottom: 50px;
   padding-bottom: 100px;
   position: relative;
 }
@@ -41,13 +42,7 @@
 #secondaryBgColorWrapper input {
   left: 75%;
 }
-/*.labels-block {*/
-  /*text-align: center;*/
-/*}*/
-/*.labels-block label {*/
-  /*display: inline-block;*/
-  /*width: 25%;*/
-/*}*/
+
 .image-container {
   width: 100%;
 }
