fix undefined bucket name & colors

--- a/views/index.pug
+++ b/views/index.pug
@@ -60,16 +60,16 @@ block content
 
             #primaryFgColorWrapper.colorPicker-wrapper
               label.mdl-textfield__label Primary foreground color
-              input#primaryFgColorPickerInput(type='color', name='primaryFg', value=configObj.primaryFg)
+              input#primaryFgColorPickerInput(type='color', name='primaryFgColor', value=configObj.primaryFgColor)
             #primaryBgColorWrapper.colorPicker-wrapper
               label.mdl-textfield__label Primary background color
-              input#primaryBgColorPickerInput(type='color', name='primaryBg', value=configObj.primaryBg)
+              input#primaryBgColorPickerInput(type='color', name='primaryBgColor', value=configObj.primaryBgColor)
             #secondaryFgColorWrapper.colorPicker-wrapper
               label.mdl-textfield__label Secondary foreground color
-              input#secondaryFgColorPickerInput(type='color', name='secondaryFg', value=configObj.secondaryFg)
+              input#secondaryFgColorPickerInput(type='color', name='secondaryFgColor', value=configObj.secondaryFgColor)
             #secondaryBgColorWrapper.colorPicker-wrapper
               label.mdl-textfield__label Secondary background color
-              input#secondaryBgColorPickerInput(type='color', name='secondaryBg', value=configObj.secondaryBg)
+              input#secondaryBgColorPickerInput(type='color', name='secondaryBgColor', value=configObj.secondaryBgColor)
           br
           input.mdl-button.mdl-js-button.mdl-button--raised.mdl-button--colored.mdl-js-ripple-effect(type='submit', value='Submit')
 
